--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,6 @@
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
-        <artifactId>jquery</artifactId>
-        <version>1.12.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.webjars</groupId>
         <artifactId>modernizr</artifactId>
         <version>2.8.3</version>
       </dependency>
@@ -67,8 +62,8 @@
       </dependency>
       <dependency>
         <groupId>org.webjars.npm</groupId>
-        <artifactId>getmdl-select</artifactId>
-        <version>1.0.4</version>
+        <artifactId>mdl-select-component</artifactId>
+        <version>0.0.6</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
