--- a/pets/presentation/src/main/resources/ValidationMessages.properties
+++ b/pets/presentation/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 javax.validation.constraints.NotNull.message = may not be empty
+pl.gov.coi.cleanarchitecture.example.spring.pets.domain.validation.constraint.Capitalized.message = must have each word started with capital letter
