Showing how to split Spring configuration from domain logic to fix #2

--- a/pets/pom.xml
+++ b/pets/pom.xml
@@ -17,5 +17,6 @@
     <module>presentation</module>
     <module>domain</module>
     <module>persistence-stub</module>
+    <module>configuration</module>
   </modules>
 </project>
