--- a/pets/configuration/pom.xml
+++ b/pets/configuration/pom.xml
@@ -5,37 +5,26 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-    <artifactId>pom</artifactId>
+    <artifactId>pets-pom</artifactId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>app</artifactId>
-  <name>String Clean Architecture :: Application</name>
+  <artifactId>pets-configuration</artifactId>
+  <name>String Clean Architecture :: Pets :: Configuration</name>
 
   <dependencies>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-presentation</artifactId>
+      <artifactId>pets-domain-usecase-logic</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-persistence-stub</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
     <dependency>
-      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-configuration</artifactId>
-      <version>${project.version}</version>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
