--- a/pets/persistence-hibernate/pom.xml
+++ b/pets/persistence-hibernate/pom.xml
@@ -9,32 +9,38 @@
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pets-configuration</artifactId>
-  <name>String Clean Architecture :: Pets :: Configuration</name>
+  <artifactId>pets-persistence-hibernate</artifactId>
+  <name>String Clean Architecture :: Pets :: PersistenceHibernate</name>
 
   <dependencies>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-domain-usecase-logic</artifactId>
+      <artifactId>pets-domain-model</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-persistence-hibernate</artifactId>
-      <version>${project.version}</version>
+      <groupId>pl.wavesoftware</groupId>
+      <artifactId>eid-exceptions</artifactId>
     </dependency>
     <dependency>
-      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-persistence-stub</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
     </dependency>
   </dependencies>
 </project>
