--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <artifactId>pom</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>String Clean Architecture :: POM</name>
+  <name>Spring Clean Architecture :: POM</name>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
