--- a/pets/domain/usecase-contract/pom.xml
+++ b/pets/domain/usecase-contract/pom.xml
@@ -27,7 +27,7 @@
       <artifactId>jsr305</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
     </dependency>
   </dependencies>
