--- a/pets/domain/usecase-logic/pom.xml
+++ b/pets/domain/usecase-logic/pom.xml
@@ -43,5 +43,9 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
