WIP split model to model api and model impl

--- a/pets/domain/pom.xml
+++ b/pets/domain/pom.xml
@@ -15,6 +15,7 @@
 
   <modules>
     <module>model</module>
+    <module>model-impl</module>
     <module>usecase-logic</module>
     <module>usecase-contract</module>
   </modules>
