--- a/pets/domain/usecase-logic/pom.xml
+++ b/pets/domain/usecase-logic/pom.xml
@@ -20,6 +20,11 @@
     </dependency>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
+      <artifactId>pets-domain-model-impl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
       <artifactId>pets-domain-usecase-contract</artifactId>
       <version>${project.version}</version>
     </dependency>
