--- a/app/pom.xml
+++ b/app/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
+      <artifactId>pets-persistence-hibernate</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
       <artifactId>pets-configuration</artifactId>
       <version>${project.version}</version>
     </dependency>
