Hiernate and MapStruct working together with tests

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>app</artifactId>
-  <name>Spring Clean Architecture :: Application</name>
+  <name>SCA :: Application</name>
 
   <dependencies>
     <dependency>
