--- a/pets/persistence-devtools/pom.xml
+++ b/pets/persistence-devtools/pom.xml
@@ -9,26 +9,31 @@
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>pets-configuration</artifactId>
-  <name>SCA :: Pets :: Configuration</name>
+  <artifactId>pets-persistence-devtools</artifactId>
+  <name>SCA :: Pets :: Persistence :: DevTools</name>
 
   <dependencies>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-domain-usecase-logic</artifactId>
+      <artifactId>pets-domain-model</artifactId>
       <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>pl.wavesoftware</groupId>
+      <artifactId>eid-exceptions</artifactId>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
   </dependencies>
 </project>
