--- a/pets/presentation/pom.xml
+++ b/pets/presentation/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>pets-presentation</artifactId>
-  <name>Spring Clean Architecture :: Pets :: Presentation</name>
+  <name>SCA :: Pets :: Presentation</name>
 
   <dependencies>
     <dependency>
