Using stringify-object to inspect JPA entities

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <name>Spring Clean Architecture</name>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
@@ -62,6 +63,11 @@
         <version>${org.mapstruct.version}</version>
         <scope>provided</scope>
         <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>pl.wavesoftware.utils</groupId>
+        <artifactId>stringify-object</artifactId>
+        <version>0.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
