--- a/pets/persistence-hibernate/pom.xml
+++ b/pets/persistence-hibernate/pom.xml
@@ -23,6 +23,10 @@
       <artifactId>eid-exceptions</artifactId>
     </dependency>
     <dependency>
+      <groupId>pl.wavesoftware.utils</groupId>
+      <artifactId>stringify-object</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
