AppMain integration tests

--- a/pets/configuration/pom.xml
+++ b/pets/configuration/pom.xml
@@ -30,5 +30,9 @@
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
