--- a/pets/domain/usecase-contract/pom.xml
+++ b/pets/domain/usecase-contract/pom.xml
@@ -27,8 +27,8 @@
       <artifactId>jsr305</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.hibernate.validator</groupId>
-      <artifactId>hibernate-validator</artifactId>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
     </dependency>
   </dependencies>
 </project>
