--- a/pets/persistence-hibernate/pom.xml
+++ b/pets/persistence-hibernate/pom.xml
@@ -33,6 +33,10 @@
       <artifactId>stringify-object</artifactId>
     </dependency>
     <dependency>
+      <groupId>pl.wavesoftware.utils</groupId>
+      <artifactId>mapstruct-jpa</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
