--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
         <version>1.0.2</version>
       </dependency>
       <dependency>
+        <groupId>pl.wavesoftware.utils</groupId>
+        <artifactId>mapstruct-jpa</artifactId>
+        <version>0.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>modernizr</artifactId>
         <version>2.8.3</version>
@@ -111,7 +116,13 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.6.2</version>
+          <version>3.7.0</version>
+          <configuration>
+            <showWarnings>true</showWarnings>
+            <compilerArgs>
+              <arg>-Xlint:all</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
