--- a/pets/domain/usecase-logic/pom.xml
+++ b/pets/domain/usecase-logic/pom.xml
@@ -13,6 +13,7 @@
   <name>SCA :: Pets :: Domain :: UseCase Logic</name>
 
   <dependencies>
+    <!-- runtime -->
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
       <artifactId>pets-domain-model</artifactId>
@@ -32,6 +33,12 @@
       <artifactId>eid-exceptions</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+
+    <!-- tests -->
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
@@ -44,8 +51,10 @@
       <artifactId>mockito-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <scope>test</scope>
     </dependency>
+
   </dependencies>
 </project>
