--- a/pets/configuration/pom.xml
+++ b/pets/configuration/pom.xml
@@ -23,8 +23,8 @@
       <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
