Listing entities identifiers on HTML page

--- a/pets/domain/model/pom.xml
+++ b/pets/domain/model/pom.xml
@@ -29,5 +29,10 @@
       <groupId>pl.wavesoftware.utils</groupId>
       <artifactId>stringify-object</artifactId>
     </dependency>
+    <dependency>
+      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
+      <artifactId>pets-incubation-pagination</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
