--- a/pets/domain/usecase-logic/pom.xml
+++ b/pets/domain/usecase-logic/pom.xml
@@ -21,7 +21,7 @@
     </dependency>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-domain-usecase-contract</artifactId>
+      <artifactId>pets-domain-contract</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -49,11 +49,6 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate.validator</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <scope>test</scope>
     </dependency>
 
   </dependencies>
