--- a/pets/presentation/pom.xml
+++ b/pets/presentation/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
-      <artifactId>pets-domain-usecase-contract</artifactId>
+      <artifactId>pets-domain-contract</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
