--- a/pets/presentation/pom.xml
+++ b/pets/presentation/pom.xml
@@ -59,5 +59,14 @@
       <groupId>org.webjars.npm</groupId>
       <artifactId>mdl-select-component</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
