Updating Pets partial work

--- a/pets/presentation/src/main/resources/ValidationMessages.properties
+++ b/pets/presentation/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 javax.validation.constraints.NotNull.message = may not be empty
-pl.gov.coi.cleanarchitecture.example.spring.pets.domain.validation.constraint.Capitalized.message = must have each word started with capital letter
+pl.gov.coi.cleanarchitecture.example.spring.pets.domain.validation.Capitalized.message = must have each word started with capital letter
+pl.gov.coi.cleanarchitecture.example.spring.pets.domain.validation.Specified.message = must be specified
