--- a/pets/presentation/pom.xml
+++ b/pets/presentation/pom.xml
@@ -57,7 +57,7 @@
     </dependency>
     <dependency>
       <groupId>org.webjars.npm</groupId>
-      <artifactId>mdl-select-component</artifactId>
+      <artifactId>getmdl-select</artifactId>
     </dependency>
 
     <dependency>
