--- a/pets/presentation/pom.xml
+++ b/pets/presentation/pom.xml
@@ -59,6 +59,10 @@
       <groupId>org.webjars.npm</groupId>
       <artifactId>getmdl-select</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>material-design-icons</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
