--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
         <version>2.0.1</version>
       </dependency>
       <dependency>
+        <groupId>org.webjars.npm</groupId>
+        <artifactId>material-design-icons</artifactId>
+        <version>3.0.1</version>
+      </dependency>
+      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>3.5.2</version>
