--- a/pets/persistence-hibernate/pom.xml
+++ b/pets/persistence-hibernate/pom.xml
@@ -55,6 +55,12 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
