--- a/pets/persistence-stub/pom.xml
+++ b/pets/persistence-stub/pom.xml
@@ -30,6 +30,10 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
