--- a/pets/persistence-hibernate/pom.xml
+++ b/pets/persistence-hibernate/pom.xml
@@ -20,6 +20,11 @@
     </dependency>
     <dependency>
       <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
+      <artifactId>pets-incubation-transactional</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>pl.coi.gov.examples.springcleanarchitecture</groupId>
       <artifactId>pets-persistence-devtools</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
