--- a/pets/persistence-devtools/src/main/resources/application.properties
+++ b/pets/persistence-devtools/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.type=trace # logging query parameter values
